clusters/k3s/apps/system/open-webui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: open-webui
  namespace: docker-services
subsets:
- addresses:
  - ip: 192.168.1.40
  ports:
  - port: 8083
---
